@@ -1,0 +1,1 @@
+Squeezer now properly counts wrapped lines before newlines.
